--- a/iscream.html
+++ b/iscream.html
@@ -12,9 +12,8 @@ layout: default
       </div>
 
       <div class="unit m-1 l-1-2 island">
-        <p class="milli">I Scream is an application that helps users find local establishments that serve icecream. It allows icecream lovers to easily find icecream in the area that serves their needs. </p>
-        <p class="milli">Since icecream is one of my favourite things to eat I began wondering if I could turn my love of icecream into a new application that could help myself and other people find icecream easily in their area and that meets their dietary restrictions. Because I'm lactose intolerant it is hard for me to find icecream that is lactose free. Also because I try to get the best deals on everything I find it hard to find icecream shops that sell quality icecream but for a reasonable price.
-        With this in mind I started to piece some other information together to try and come up with a problem statement that could drive my create of the app.</p>
+        <p class="mulit milli">I Scream is an application that helps users find local establishments that serve icecream. It allows icecream lovers to easily find icecream in the area that serves their needs. </p>
+        <p class="milli">Since icecream is one of my favourite things to eat I began wondering if I could turn my love of icecream into a new application that could help myself and other people find icecream easily in their area and that meets their dietary restrictions. Because I'm lactose intolerant it is hard for me to find icecream that is lactose free. Also because I try to get the best deals on everything I find it hard to find icecream shops that sell quality icecream but for a reasonable price. With this in mind I started to piece some other information together to try and come up with a problem statement that could drive my create of the app.</p>
       </div>
 
       <div class="card unit s-1 m-1-2 l-1-2 island">
