--- a/jacket.html
+++ b/jacket.html
@@ -30,11 +30,9 @@ layout: default
         <p class="milli">With the yellow jacket connection between this book, video game and movie I decided to create a multi poster piece and create a poster for each creation. With research done for each piece I began making sketches to come up with a look for each poster. Each poster would be created with a yellow jacket but use different props in each poster to tell three different stories.</p>
       </div>
 
-      <div class="card unit s-1 m-1-2 island">
+      <div class="card unit s-1 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/jackets/case1.jpg" alt="">
       </div>
-
-\
 
       <div class="unit s-1 m-1-3 island">
         <p class="milli"></p>
