--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
 <div class="banner-small">
   <div class="text2">
     <div>
-      <h2 class="">Welcome</h2>
+      <h2 class="">Hey There!</h2>
     </div>
     <p>My name is Jaimie and I am a graphic designer located in Ottawa, Ontario. I specialize in <strong>illustration</strong>, <strong>branding</strong> and <strong>motion</strong></p>
   </div>
