--- a/blurry.html
+++ b/blurry.html
@@ -11,7 +11,7 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1 l-1-2 island">
-        <p class="milli">During my time in the graphic design program I got to do a mockup rebranding for a small company. The Blurry Pixel is a small gaming bar in downtown Ottawa where people can get drinks and play video games into the night. The owner came up with the name <i>The Blurry Pixel</i> because when you start to stare at a screen for a long time things start to blur and look pixelated. The colours green and black were chosen because that was the colour of monochrome monitors which were very common in the early days of computing.</p>
+        <p class="milli">During my time in the graphic design program I got to do a mockup rebranding for a small company. The Blurry Pixel is a small gaming bar in downtown Ottawa where people can get drinks and play video games, well into the night. The owner came up with the name <i>The Blurry Pixel</i> because when you stare at a screen for a long time, things start to blur and look pixelated. The colours green and black were chosen because those were the colours of monochrome monitors which were very common in the early days of computing.</p>
       </div>
 
       <div class="card unit s-1 m-1 l-1-2 island">
@@ -19,7 +19,7 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1 l-1-2 island">
-        <p class="milli">The company used a wordmark to advertise the location. The name of the establishment is typed in a green pixel font that is easily recognizable but not very visually appealing. To redesign the brand I began coming up with logos sketches for the company. During the sketching process I tried to keep gaming aspects in the art since the bar's main feature is its video games. Further more when using gaming icons I wanted to use something that would be easily recognizable to people who do not play video games.</p>
+        <p class="milli">The company used a wordmark to advertise the location. The name of the establishment is typed in a green pixel font that is easily recognizable but not very visually appealing. To redesign the brand I began coming up with logos sketches for the company. During the sketching process I tried to keep gaming aspects in the art, since the bar's main feature is its video games. Furthermore, when using gaming icons, I wanted to use something that would be easily recognizable to people who do not play video games.</p>
       </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
@@ -27,7 +27,7 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">Once two top logos were picked I played around with the original company colours since the owner wanted those to stay. The colours were applied in many different ways to find the most appealing look. Since every logo should have a coloured version and a black and white version I then tried different ways to apply the black and white to make it stand out.</p>
+        <p class="milli">Once I decided on two logos, I played around with the original company’s colours, since the owner wanted those to stay. The colours were applied in many different ways to find the most appealing look. Since every logo should have a coloured version and a black and white version I then tried different ways to apply the black and white, to make it stand out.</p>
       </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
@@ -35,7 +35,7 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">Once a final logo was chosen in colour and in black and white I was able to create a branding guide for the company. The branding guide shows how the logos, wordmarks, colours and photography should be used.</p>
+        <p class="milli">Once a final logo was chosen in colour and in black and white, I was able to create a branding guide for the company. The branding guide shows how the logos, wordmarks, colours and photography should be used.</p>
       </div>
     </div>
 
