--- a/fox.html
+++ b/fox.html
@@ -11,7 +11,7 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1 l-1-4 island">
-        <p class="milli">Black Fox Coffee Shop is my own take on a coffee shop brand. I wanted to create a brand that had a catchy name, simple look, and that would fit in with a the young hipster audience. I wanted to create a brand that would be a go to downtown location for people to go to rather then a brand name location. The first thing I came up with was a name. I brainstormed coffee shop names that would incorporate some sort of coffee lingo. Most names sounded too generic with the name coffee or bean in the name. After analyzing different types of coffee I used dark coffee and my favourite animal to come up with the name Dark Fox.</p>
+        <p class="milli">Black Fox Coffee Shop is my own take on a coffee shop brand. I wanted to create a brand that had a catchy name, simple look, and that would fit in with a young hipster clientele . I wanted to create a brand that would be a go-to downtown location for people to go to rather then a brand name location. The first thing I came up with was a name. I brainstormed coffee shop names that would incorporate some sort of coffee lingo. Most names sounded too generic with the name coffee or bean in the name. After analyzing different types of coffee, I used dark coffee and my favourite animal to come up with the name Black Fox.</p>
       </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
@@ -19,7 +19,7 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">With a name in mind I began the sketching phase to come up with a wordmark and a signature look for the brand. To keep the coffee shop look I did research on what coffee shop logos look like and what they are missing. After playing around with the type for the wordmark I was able to substitute the <i>O</i> with a coffee bean. With this look I was able to incorporate iconography into my word mark and have it still be legible.</p>
+        <p class="milli">With a name in mind I began the sketching phase to come up with a wordmark and a signature look for the brand. To keep the coffee shop look, I did research on what coffee shop logos look like and what they are missing. After playing around with the type for the wordmark I was able to substitute the <i>O</i> with a coffee bean. With this look I was able to incorporate iconography into my word mark and have it still be legible.</p>
       </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
@@ -27,7 +27,7 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">Since the coffee bean gave the logo a signature look I incorporate it into the rest of the brand by using it to cover tins and coffee cups. To go along with the black I used a maroon to give it a more sophisticated and elegant look to go along more with the target audience. I also wanted to steer away from the greens, browns and reds that other popular coffee shops use to make this brand more unique.</p>
+        <p class="milli">Since the coffee bean gave the logo a signature look I incorporated it into the rest of the brand by using it to cover tins and coffee cups. To go along with the black I used a maroon to give it a more sophisticated and elegant look, to go along more with the target audience. I also wanted to steer away from the greens, browns and reds that other popular coffee shops use to make this brand more unique.</p>
       </div>
 
       <div class="card unit s-1 m-1-2 island">
