--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
     <div>
       <h2 class="">Hey There!</h2>
     </div>
-    <p>My name is Jaimie and I am a graphic designer located in Ottawa, Ontario. I specialize in <strong>illustration</strong>, <strong>branding</strong> and <strong>motion</strong></p>
+    <p>My name is Jaimie and I am a graphic designer/developer located in Ottawa, Ontario. I specialize in <strong>illustration</strong>, <strong>branding</strong> and <strong>motion</strong>.</p>
   </div>
 </div>
 
