--- a/iscream.html
+++ b/iscream.html
@@ -11,8 +11,8 @@ layout: default
       </div>
 
       <div class="unit m-1 l-1-2 island">
-        <p class="mulit milli">I Scream is an application that helps users find local establishments that serve icecream. It allows icecream lovers to easily find icecream in the area that serves their needs. </p>
-        <p class="milli">Since icecream is one of my favourite things to eat I began wondering if I could turn my love of icecream into a new application that could help myself and other people find icecream easily in their area and that meets their dietary restrictions. Because I'm lactose intolerant it is hard for me to find icecream that is lactose free. Also because I try to get the best deals on everything I find it hard to find icecream shops that sell quality icecream but for a reasonable price. With this in mind I started to piece some other information together to try and come up with a problem statement that could drive my create of the app.</p>
+        <p class="mulit milli">I Scream, is an application that helps users find local establishments that serve ice cream. It allows ice cream lovers to easily find ice cream in the area that serves their needs. </p>
+        <p class="milli">Since ice cream is one of my favourite things to eat, I began wondering if I could turn my love of ice cream into a new application that could help myself and others find it more easily. Because I'm lactose intolerant it is hard for me to find ice cream that is lactose free, this app could also help find stores that serve lactose free products. I always try to get the best deals on everything however I find it hard to find ice cream shops that sell quality ice cream at a reasonable price. With this in mind, I started to piece together information to come up with a problem statement that could drive my creation of the app.</p>
       </div>
 
       <div class="card unit s-1 m-1-2 l-1-2 island">
@@ -67,7 +67,7 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">When evaluation what users feel during their icecream shop experience I came up with the problem statement, <strong>Ice cream lovers need a way to easily view whats offered at ice-cream shops because they want to know their options.</strong> With this knowledge in had I came up with three different flows that my app should include to support my users needs.</p>
+        <p class="milli">When evaluating what users feel during their ice cream shop experience, I came up with the problem statement, <strong>Ice cream lovers need a way to easily view what is offered at ice-cream shops because they want to know their options.</strong> With this knowledge I came up with three different flows that my app should include to support my users needs.</p>
       </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
