--- a/jacket.html
+++ b/jacket.html
@@ -11,7 +11,7 @@ layout: default
       </div>
 
       <div class="unit s-1 l-1-4 island">
-        <p class="milli"> With the crazy success of the 2017’s remake of Stephen Kings’ IT I wanted to create a poster to showcase the film with an illustrative look. Before starting sketches I did my research on simplistic posters to see what kind of approaches other artists have taken. My biggest inspiration for simplistic posters was the work of Saul Bass. </p>
+        <p class="milli">With the crazy success of the 2017’s remake of Stephen Kings’ <i>IT</i>, I wanted to create a poster to showcase the film with an illustrative look. Before starting sketches I did my research on simplistic posters to see what kind of approaches other artists have taken. My biggest inspiration for simplistic posters was the work of Saul Bass.</p>
       </div>
 
       <div class="card unit s-1 l-1-2 island">
@@ -19,7 +19,7 @@ layout: default
       </div>
 
       <div class="unit s-1 l-1-2 island">
-        <p class="milli">After getting inspiration I began brainstorming ideas for a poster by creating a spider graph. With this I was able to write down everything that came to mind when thinking about the movie. During my brainstorming I made connections to several other books, films and games. Connections that would not be made right away. The connections that caught my attention were the common connection between the movie and one of my favourite video games entitled Little Nightmares. Although two completely different horror stories they each have a child that sports a yellow jacket. Furthermore I was able to come up with another fantasy/thriller movie that included a child with a yellow jacket, Tim Burtons' Coraline. </p>
+        <p class="milli">After getting inspiration I began brainstorming ideas for a poster by creating a spider graph. With this I was able to write down everything that came to mind when thinking about the movie. During my brainstorming I made associations to several other books, films and games, connections that would not be made right away. The ones that caught my attention were the common connections between the movie and one of my favourite video games titled <i>Little Nightmares</i>. Although they are two completely different horror stories, they each have a child that sports a yellow jacket. Furthermore I was able to come up with another fantasy/thriller movie that included a child with a yellow jacket, Tim Burtons' <i>Coraline</i>.</p>
       </div>
 
       <div class="card unit s-1 l-3-4 island">
