--- a/nerd.html
+++ b/nerd.html
@@ -11,7 +11,7 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1 l-1-4 island">
-        <p class="milli">Video games were the reason I got into graphic design. In my spare time I would make posters to advertise my favourite games without really knowing where else I could take it. Over the years I have learnt how to apply these designs to many different mediums and not just on paper. Because video games are so popular </p>
+        <p class="milli">Video games are the reason I got into graphic design.  In my spare time I would make posters to advertise my favourite games, I never realized where this pastime would take me. Over the years I have learned how to make my pencil sketches come alive by using different mediums, these designs are now more than 2 dimensional sketches on paper.</p>
       </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
@@ -19,7 +19,7 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">When I get into a new game it provides may new opportunities for sketching and idea making. Since the release of the Nintendo Switch, Nintendo has introduced many Mario games which introduced many new inspirations. There are so many different ways to represent this game and have it still be recognizable by everyone, and not just gamers.</p>
+        <p class="milli">When I get into a new game it inspires new ideas and provides me opportunities for sketching. Since the release of the Nintendo Switch, Nintendo has introduced many Mario games which gave me many new inspirations. There are so many different ways to represent this game and still have it recognizable to everyone, not just gamers.</p>
       </div>
 
       <div class="card unit s-1 island">
