--- a/404.html
+++ b/404.html
@@ -1,3 +1,7 @@
 ---
 layout: default
 ---
+<div class="bennertext island">
+  <h1 class="">Something is missing here.</h1>
+  <p>Lets head back to the home page to see more awesome stuff!</p>
+</div>
