--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="island bg">
+<div class="island lostpage">
   <h1 class="">Something is missing here.</h1>
   <p>Lets head back to the home page to see more awesome stuff!</p>
 </div>
