--- a/canadian.html
+++ b/canadian.html
@@ -7,7 +7,7 @@ layout: default
     <div class="pieces grid">
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/coffee.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/coffee.jpg" alt="Mug">
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
@@ -15,27 +15,28 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/sketch.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/sketch.jpg" alt="Sketches">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/logos.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/logos.jpg" alt="Logo Variations">
       </div>
 
 
       <div class="card unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/stag.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/stag.jpg" alt="Stag Syrup">
       </div>
 
       <div class="unit multi s-1 m-1 l-1-2 island">
         <p class="milli">The approach I decided to go with was a drawing of a lumberjack's face with a maple leaf and forest behind him. After a few takes, the forest began to look like too much behind the lumberjack for a simple logo. With the leaf behind the head I extended the bottom of the leaf and infused it with the plaid to make it part of the lumberjacks body to connect the two pieces.</p>
         <p class="milli">The plaid I used with the lumberjack logo gave inspiration for another piece. I wanted to design a commemorative Canada 150 piece. One of the most iconic things in Canada is maple syrup so I began creating designs for maple syrup bottles. To make the syrup more unique and stand out from any other ones I created a wine bottle that would carry out the plaid look along with a box to go in.</p>
-        <p class="milli">With the design of the bottle label and box I wanted to keep it simple and use simple lines like the lumberjack logo. I wanted to use red and white for the look since they are the Canadian colours but also use black to give it a more dark and bold look. To complement the plaid I went with a black board look on the bottle and used a white hand written font to look like chalk.</p>
+        <p class="milli">
+        With the design of the bottle label and box I wanted to keep it simple and use simple lines like the lumberjack logo. I wanted to use red and white for the look since they are the Canadian colours but also use black to give it a more dark and bold look. To complement the plaid I went with a black board look on the bottle and used a white hand written font to look like chalk.</p>
       </div>
 
 
       <div class="card unit s-1 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/sign.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/sign.jpg" alt="Shop Sign">
       </div>
 
       <div class="unit s-1 m-1-3 island">
