--- a/iscream.html
+++ b/iscream.html
@@ -7,7 +7,7 @@ layout: default
     <div class="pieces grid">
 
       <div class="card unit m-1 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/i-scream-screans.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/i-scream-screans.jpg" alt="Phone Screens">
       </div>
 
       <div class="unit m-1 l-1-2 island">
@@ -16,11 +16,11 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/sketch1.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/sketch1.jpg" alt="Sketches">
       </div>
 
       <div class="card unit s-1 m-1-2 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/flow.png" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/flow.png" alt="Flow Chart">
       </div>
 
     <div class="grid lists">
@@ -63,7 +63,7 @@ layout: default
     </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/sketch2.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/sketch2.jpg" alt="Mock up Sketches">
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
@@ -71,7 +71,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/screen.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/screen.jpg" alt="Iphone X mock up">
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
