--- a/adventure.html
+++ b/adventure.html
@@ -7,7 +7,7 @@ layout: default
     <div class="pieces grid">
 
       <div class="card unit s-1 m-1 l-2-3 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/adventure/poster.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/adventure/poster.jpg" alt="Hanging Picture">
       </div>
 
       <div class="unit s-1 m-1 l-1-3 island">
@@ -15,7 +15,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 l-2-3 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/adventure/items.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/adventure/items.jpg" alt="Sketch Book">
       </div>
 
       <div class="unit s-1 m-1-2 l-1-3 island">
@@ -23,11 +23,11 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/adventure/painting.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/adventure/painting.jpg" alt="Mural">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/adventure/room.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/adventure/room.jpg" alt="Framed Picture">
       </div>
 
       <div class="unit s-1 m-1-3 island">
