--- a/blurry.html
+++ b/blurry.html
@@ -7,7 +7,7 @@ layout: default
     <div class="pieces grid">
 
       <div class="card unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/sign.jpg" alt="">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/sign.jpg" alt="Store Sign">
       </div>
 
       <div class="unit s-1 m-1 l-1-2 island">
@@ -15,7 +15,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/sketch.jpg" alt="">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/sketch.jpg" alt="Logo Sketches">
       </div>
 
       <div class="unit s-1 m-1 l-1-2 island">
@@ -23,7 +23,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
-        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/logos.jpg" alt="">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/logos.jpg" alt="Logo Ideas">
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
@@ -31,7 +31,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
-        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/final.jpg" alt="">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/final.jpg" alt="Final Logo">
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
