--- a/fox.html
+++ b/fox.html
@@ -7,7 +7,7 @@ layout: default
     <div class="pieces grid">
 
       <div class="card unit s-1 m-1 l-3-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/coffee/sign1.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/coffee/sign1.jpg" alt="Shop Sign">
       </div>
 
       <div class="unit s-1 m-1 l-1-4 island">
@@ -15,7 +15,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/coffee/sketch.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/coffee/sketch.jpg" alt="Logo Sketches">
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
@@ -23,7 +23,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/coffee/logos.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/coffee/logos.jpg" alt="Final Logo Renders">
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
@@ -31,15 +31,15 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/coffee/can.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/coffee/can.jpg" alt="Coffe Bean Container">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/coffee/paper.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/coffee/paper.jpg" alt="Coffee Cup">
       </div>
 
       <div class="card unit s-1 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/coffee/bag.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/coffee/bag.jpg" alt="Coffee Bag">
       </div>
 
     </div>
