--- a/jacket.html
+++ b/jacket.html
@@ -7,7 +7,7 @@ layout: default
     <div class="pieces grid">
 
       <div class="card unit s-1 l-3-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/jackets/jacket.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/jackets/jacket.jpg" alt="Hanging Posters">
       </div>
 
       <div class="unit s-1 l-1-4 island">
@@ -15,7 +15,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/jackets/thought.png" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/jackets/thought.png" alt="Spider Chart">
       </div>
 
       <div class="unit s-1 l-1-2 island">
@@ -23,7 +23,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 l-3-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/jackets/sketch.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/jackets/sketch.jpg" alt="Style Sketches">
       </div>
 
       <div class="unit s-1 l-1-4 island">
@@ -31,7 +31,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/jackets/case1.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/jackets/case1.jpg" alt="Phone Case">
       </div>
 
       <div class="unit s-1 m-1-3 island">
