--- a/nerd.html
+++ b/nerd.html
@@ -7,7 +7,7 @@ layout: default
     <div class="pieces grid">
 
       <div class="card unit s-1 m-1 l-3-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/hat.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/hat.jpg" alt="Waluigi Hat">
       </div>
 
       <div class="unit s-1 m-1 l-1-4 island">
@@ -15,7 +15,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/sketch.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/sketch.jpg" alt="Sketches">
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
@@ -23,19 +23,19 @@ layout: default
       </div>
 
       <div class="card unit s-1 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/long.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/long.jpg" alt="Mario and Luigi Sweater">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/mug.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/mug.jpg" alt="Star Pocket Mug">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/man.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/man.jpg" alt="Yoshi Egg Shirt">
       </div>
 
       <div class="card unit s-1 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/shoes.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/shoes.jpg" alt="Yoshi Shoes">
       </div>
 
       <div class="unit s-1 m-1-3 island">
