--- a/vans.html
+++ b/vans.html
@@ -7,11 +7,11 @@ layout: default
     <div class="pieces grid">
 
       <div class="card unit s-1 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/vans/poster.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/vans/poster.jpg" alt="Vans Poster">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/vans/sketch.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/vans/sketch.jpg" alt="Art Deco Sketches">
       </div>
 
       <div class="unit multi s-1 m-1-2 island">
@@ -20,11 +20,11 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/vans/bag.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/vans/bag.jpg" alt="Vans Shopping Bag">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/vans/card.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/vans/card.jpg" alt="Vans Gift Card">
       </div>
 
     </div>
