Updating site to put on new branding

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@ layout: default
   <!--PORTFOLIO-->
 <section class="grid" id="work" >
 
+  <a href="{{site.baseurl}}" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-09.png" alt="">
+      <div class="content center-contents">
+        <h3 class="">COMING SOON</h3>
+      </div>
+    </div>
+  </a>
+
   <a href="{{site.baseurl}}blurry" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-05.jpg" alt="">
@@ -51,15 +60,6 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}nerd" class="card unit xs-1-2 m-1-2 l-1-4">
-    <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-03.jpg" alt="">
-      <div class="content center-contents">
-        <h3 class="">Nerd Alert</h3>
-      </div>
-    </div>
-  </a>
-
   <a href="{{site.baseurl}}fox" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-08.jpg" alt="">
@@ -69,11 +69,20 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}vans" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}solink" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-06.jpg" alt="">
       <div class="content center-contents">
-        <h3 class="">Vans</h3>
+        <h3 class="">Solink</h3>
+      </div>
+    </div>
+  </a>
+
+  <a href="{{site.baseurl}}nerd" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-03.jpg" alt="">
+      <div class="content center-contents">
+        <h3 class="">Nerd Alert</h3>
       </div>
     </div>
   </a>
@@ -88,14 +97,14 @@ layout: default
   </a>
 
 
-  <a href="{{site.baseurl}}canadian" class="card unit xs-1-2 m-1-2 l-1-4">
+  <!-- <a href="{{site.baseurl}}canadian" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-07.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Canadian</h3>
       </div>
     </div>
-  </a>
+  </a> -->
 
   <a href="{{site.baseurl}}adventure" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
