Correcting Solink to Vans

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ layout: default
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-06.jpg" alt="">
       <div class="content center-contents">
-        <h3 class="">Solink</h3>
+        <h3 class="">Vans</h3>
       </div>
     </div>
   </a>
