--- a/solink.html
+++ b/solink.html
@@ -6,15 +6,11 @@ layout: default
     <h3 class="island">Solink Corp</h3>
     <div class="pieces grid">
 
-      <div class="card unit s-1 m-1 l-1-2 island">
+      <div class="card unit s-1-4 m-1-4 l-1-4 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/oldnew.png" alt="Old logo and new one">
       </div>
 
-      <div class="unit s-1 m-1 l-1-2 island">
-        <p class="milli">Talk about the old logo and why it needed to change.</p>
-      </div>
-
-      <div class="card unit s-1 m-1 l-1-2 island">
+      <div class="card unit s-1-4 m-1-4 l-1-4 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/sketches.jpg" alt="Logo Sketches">
       </div>
 
