Updated Vans link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}solink" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}vans" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-06.jpg" alt="">
       <div class="content center-contents">
