--- a/solink.html
+++ b/solink.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: default
 ---
 
@@ -43,4 +43,4 @@ layout: default
       <iframe class="embed-item" src="https://player.vimeo.com/video/277650680?loop=1&title=0&byline=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
   </div>
-</section>
+</section> -->
