Updated Solink page

--- a/blurry.html
+++ b/blurry.html
@@ -35,13 +35,18 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">Once a final logo was chosen in colour and in black and white, I was able to create a branding guide for the company. The branding guide shows how the logos, wordmarks, colours and photography should be used.</p>
+        <p class="milli">Once a final logo was chosen in colour and in black and white, I was able to create a branding guide for the company. The branding guide shows how the logos, wordmarks, colours and photography should be used. The logo is now more dynamic and modern but still keeps the gaming feel without having pixel text. The logo can be animated with blurry effects and pixes to keep the original feel when it is displayed on the TVs in the establishment.</p>
       </div>
+
+      <div class="embed embed-16by9">
+        <iframe class="embed-item" src="https://player.vimeo.com/video/254134218?loop=1&title=0&byline=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+    </div>
     </div>
 
 
 
-  <div class="island">
+  <!-- <div class="island">
     <div class="slideshow-container">
 
     <div class="mySlides fade">
@@ -114,6 +119,11 @@ layout: default
       <span class="dot" onclick="currentSlide(10)"></span>
     </div>
 
+    <div class="embed embed-16by9">
+      <iframe class="embed-item" src="https://player.vimeo.com/video/246682249?loop=1&title=0&byline=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
+  </div>
+
     <script>
     var slideIndex = 1;
     showSlides(slideIndex);
@@ -141,4 +151,4 @@ layout: default
       slides[slideIndex-1].style.display = "block";
       dots[slideIndex-1].className += " active";
     }
-    </script>
+    </script> -->
