--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@ layout: default
   <!--PORTFOLIO-->
 <section class="grid" id="work" >
 
-  <a href="{{site.baseurl}}" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}solink" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-09.png" alt="">
       <div class="content center-contents">
-        <h3 class="">COMING SOON</h3>
+        <h3 class="">Solink</h3>
       </div>
     </div>
   </a>
