--- a/solink.html
+++ b/solink.html
@@ -1,46 +1,117 @@
-<!-- ---
+---
 layout: default
 ---
 
   <section class="workbody">
-    <h3 class="island">Solink Corp</h3>
+    <h3 class="island">Solink</h3>
     <div class="pieces grid">
 
-      <div class="card unit s-1-4 m-1-4 l-1-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/oldnew.png" alt="Old logo and new one">
+      <div class="card unit s-1 m-1-2 l-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/wall.jpg" alt="Solink logo on wall">
       </div>
 
-      <div class="card unit s-1-4 m-1-4 l-1-4 island">
+
+      <div class="unit s-1 m-1-2 l-1-2 island">
+        <p class="milli">Solink is a video security company that helps their clients find theft and improve operations in their businesses by giving them total visibility. As a tech company the original logo used a typical blue colour that can be associated with many tech logos (ie microsoft, facebook, twitter, word, etc.) Moving forward I wanted to stay within the blue family for the final product but changed it from the typical technology blue to stand out from other tech company logos. Since the original logo was long but short it made it awkward to put it on documents with other partner and client logos. The additional <i>S</i> icon that was added to the left side of the logo added unnecessary length while the font choice made SOLINK look very compressed.</p>
+      </div>
+
+      <div class="grid lists">
+        <div class="card unit s-1 m-1-3 l-1-3 island">
+          <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/oldnew.png" alt="Old logo and new one">
+        </div>
+
+        <div class="unit s-1 m-1-3 l-1-3 island">
+          <h6>Original Logo Pro's</h6>
+          <ul class="list milli">
+            <li>Long-time presence</li>
+            <li>Nostalgia and connection for long-term staff</li>
+            <li>Simplicity</li>
+            <li>Masculine, strong, bold</li>
+          </ul>
+        </div>
+
+        <div class="unit s-1 m-1-3 l-1-3 island">
+          <h6>Original Logo Con's</h6>
+          <ul class="list milli">
+            <li>Strong security vibe is now less relevant</li>
+            <li>Logo is not designed for ease of use</li>
+            <li>S and wordmark font are becoming outdated</li>
+            <li>Colours are muted, dated</li>
+            <li>Does not reflect the evolution and growth of the product</li>
+            <li>Looks industrial, has that B2B feel that visually implies we do not have marketing expertise</li>
+            <li>Lacks impact and memorability</li>
+            <li>Blockchain connection issues</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="card unit s-1 m-1-2 l-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/sketches.jpg" alt="Logo Sketches">
       </div>
 
-      <div class="unit s-1 m-1 l-1-2 island">
-        <p class="milli">text about the process and what I took into consideration.</p>
+      <div class="unit s-1 m-1-2 l-1-2 island">
+        <p class="milli">When sketching out ideas for the logo I wanted to adding an icon into the word SOLINK so that it wouldn't add unnecessary length to the logo. Along with that it could stand alone as an alternative logo. The original logo had two links forming the <i>S</i> to represent <i>LINK</i> in the company name. Without being so literal I came up with the idea to use the <i>O</i> in the name to link three dots together.<br> The three dots are very representative of the company since they talk in threes a lot.</p>
+        <ul class="list milli">
+          <li>Video - pos - data</li>
+          <li>View - find - share</li>
+          <li>Motion - transaction - action</li>
+          <li>LP - security - operations</li>
+          <li>Retail - restaurants - banks</li>
       </div>
 
-      <div class="card unit s-1 m-1-2 l-3-4 island">
-        <img class="portfolio-piece " src="{{site.baseurl}}/images/solink/sketches.jpg" alt="final logo">
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/solink/brochure.jpg" alt="Buisness cards">
+      </div>
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/movies.jpg" alt="Buisness cards">
+      </div>
+      <div class="card unit s-1 m-1 l-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/threebanners.jpg" alt="Buisness cards">
       </div>
 
-      <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">Text about the final logo and what you can do to the logo.</p>
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/postcard.jpg" alt="Buisness cards">
+      </div>
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/tims.jpg" alt="Buisness cards">
+      </div>
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/burger.jpg" alt="Buisness cards">
+      </div>
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/cards.jpg" alt="Buisness cards">
       </div>
 
-      <div class="card unit s-1 m-1-2 l-3-4 island">
-        <img class="portfolio-piece " src="{{site.baseurl}}/images/solink/cards.png" alt="Buisness cards">
+      <div class="card unit s-1 m-1 l-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/booth.jpg" alt="Buisness cards">
+      </div>
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/firstin.jpg" alt="Buisness cards">
+      </div>
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/bank.jpg" alt="Buisness cards">
       </div>
 
-      <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">Text about the swag and things made for the company.</p>
+
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/solink/infographic.jpg" alt="Buisness cards">
       </div>
-    </div>
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/brochuretims.jpg" alt="Buisness cards">
+      </div>
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/toast.jpg" alt="Buisness cards">
+      </div>
+      <div class="card unit s-1 m-1-2 l-1-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/features.jpg" alt="Buisness cards">
+      </div>
 
-    <div class="card unit s-1 m-1-2 l-1-2 island">
-      <img class="portfolio-piece " src="{{site.baseurl}}/images/solink/cards.png" alt="Buisness cards">
-    </div>
+      <div class="embed embed-16by9">
+        <iframe class="embed-item" src="https://player.vimeo.com/video/372783371?loop=1&title=0&byline=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
 
-    <div class="embed embed-16by9">
-      <iframe class="embed-item" src="https://player.vimeo.com/video/277650680?loop=1&title=0&byline=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    </div>
+      <div class="embed embed-16by9">
+        <iframe class="embed-item" src="https://player.vimeo.com/video/372785360?loop=1&title=0&byline=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
   </div>
-</section> -->
+</section>
