--- a/blurrypixel.html
+++ b/blurrypixel.html
@@ -7,7 +7,7 @@ layout: default
     <div class="pieces grid">
 
       <div class="card unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/sign.jpg" alt="Store Sign">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/sign.jpg" alt="Store sign">
       </div>
 
       <div class="unit s-1 m-1 l-1-2 island">
@@ -15,19 +15,19 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/sketch.jpg" alt="Logo Sketches">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/sketch.jpg" alt="Logo sketches">
       </div>
 
       <div class="unit s-1 m-1 l-1-2 island">
         <p class="milli">The company used a wordmark to advertise the location. The name of the establishment is typed in a green pixel font that is easily recognizable but not very visually appealing. To redesign the brand I began coming up with logos sketches for the company. During the sketching process I tried to keep gaming aspects in the art, since the bar's main feature is its video games. Furthermore, when using gaming icons, I wanted to use something that would be easily recognizable to people who do not play video games.</p>
       </div>
 
-      <div class="card unit s-1 m-1-2 l-3-4 island">
+      <div class="card unit s-1 m-1-2 l-1-2 island">
         <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/logos.jpg" alt="Logo Ideas">
       </div>
 
-      <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">Once I decided on two logos, I played around with the original company’s colours, since the owner wanted those to stay. The colours were applied in many different ways to find the most appealing look. Since every logo should have a coloured version and a black and white version I then tried different ways to apply the black and white, to make it stand out.</p>
+      <div class="unit s-1 m-1-2 l-1-2 island">
+        <p class="milli">Once I decided on two logos, I played around with the original company’s colours, since the owner wanted those to stay. The colours were applied in many different ways to find the most appealing look. Since every logo should have a coloured version and a black and white version I then tried different ways to apply the black and white, to make it stand out. Once a final logo was chosen in colour and in black and white, I was able to create a branding guide for the company. The branding guide shows how the logos, wordmarks, colours and photography should be used. The logo is now more dynamic and modern but still keeps the gaming feel without having pixel text. The logo can be animated with blurry effects and pixes to keep the original feel when it is displayed on the TVs in the establishment. The logo is now more dynamic and modern but still keeps the gaming feel without having pixel text. </p>
       </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
@@ -35,7 +35,15 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">Once a final logo was chosen in colour and in black and white, I was able to create a branding guide for the company. The branding guide shows how the logos, wordmarks, colours and photography should be used. The logo is now more dynamic and modern but still keeps the gaming feel without having pixel text. The logo can be animated with blurry effects and pixes to keep the original feel when it is displayed on the TVs in the establishment.</p>
+        <p class="milli">The logo can be animated with blurry effects and pixes to keep the original feel when it is displayed on the TVs in the establishment. The establishment used to just reuse printed menus for customers to use. This allowed the menus to get stained and also had no design to it. I created a simple double sided menu that uses green on black text on one side which represents the monochrome monitors that inspired the colours for the logo. With their small menu the items can be layed out more effectively when using both sides.</p>
+      </div>
+
+      <div class="card unit s-1 m-1-2 l-1-2 island">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/menu.jpg" alt="Food Menu">
+      </div>
+
+      <div class="card unit s-1 m-1-2 l-1-2 island">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/drink.jpg" alt="Beer glass">
       </div>
 
       <div class="embed embed-16by9">
