--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}blurry" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}blurrypixel" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-05.jpg" alt="">
       <div class="content center-contents">
